--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: yangkkokk
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/yangkkokk/yangkkokk.github.io/master/images/QQ%E5%9B%BE%E7%89%8720180102201620.jpg
 
 #
 # Flags below are optional
