--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: yangkkokk
 
 # Short bio or description (displayed in the header)
-description: 新的bolg!
+description: gnuraido openbts saslte osmocom rtlsdr
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/yangkkokk/yangkkokk.github.io/master/images/QQ%E5%9B%BE%E7%89%8720180102201620.jpg
